test/arrays/return/returnArbitraryBadEltType.good
returnArbitraryBadEltType.chpl:1: In function 'inc':
returnArbitraryBadEltType.chpl:2: error: type mismatch in assignment from real(64) to int(64)
